add prefix /api for backend routes, add nginx and reverse proxy on 8080 port
